--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^2.6.5",
     "material-icons": "^0.3.1",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.0.6",
