--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-input-mask": "0.0.10",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.0.6",
-    "vuesax": "^3.8.75"
+    "vue-the-mask": "^0.11.1",
+    "vuesax": "^3.9.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
