--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.28",
     "core-js": "^2.6.5",
+    "jquery": "^1.9.1",
     "material-icons": "^0.3.1",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
+    "popper.js": "^1.14.7",
     "vue": "^2.6.10",
     "vue-input-mask": "0.0.10",
     "vue-material": "^1.0.0-beta-11",
